# naia-shell

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTEXT-LICENSE  GEMINI.md  OPENCODE.md  README.md  announcements.json  gemini-price.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude/: git-push-approved.marker  settings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.users/: hooks-list.md
READMES/: .translate-readme-state.json  README.ar.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.vi.md  README.zh.md
agent/: .npmrc  DEPLOY.md  package.json  pnpm-lock.yaml  tsconfig.json
core/: .dependency-cruiser.cjs  README.md  glossary.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/: 00-PHASES.md  ARCHITECTURE.md  PRESENTATION.md  README.md  STRUCTURE.md  acceptance-criteria.md  brain-body-environment.md  glossary.md  logging.md  memory.ko.md  memory.md  panel-development-guide.md  panel-spec.md  project-structure.md  requirements.md  shell-agent-protocol-v1.md  test-catalog.md  user-scenarios.md
flatpak/: io.nextain.naia.yml  naia-launch.sh
recipes/: recipe.yml
releases/: v0.1.1.yaml  v0.1.2.yaml  v0.1.3.yaml  v0.1.4.yaml  v0.1.5.yaml
scripts/: README.md  build-windows.ps1  check-assembly-coverage.mjs  check-build-contract.mjs  check-compile-integrity.mjs  check-file-anchors.mjs  deploy.ps1  dev-setup.mjs  oss-readiness.mjs  prune-nsis.py  setup-git-hooks.sh  tauri-with-mode.mjs  verify-watch.sh
shell/: .env.e2e.sample  .env.sample  .gitignore  package.json  pnpm-lock.yaml
shell/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.conf.linux.json  tauri.conf.local.json  tauri.conf.windows.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/plugins/tauri-plugin-stt/: build.rs
shell/src-tauri/src/: audit.rs  browser.rs  browser_webview.rs  capture.rs  gemini_live.rs  lib.rs  memory.rs  panel.rs  pty.rs  workspace.rs
shell/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  wsl.rs
tmp/: add_i18n_keys.py  adk-boundary-decision.md  codex-final.md  codex-review.out  codex-review2.md  commit-msg.txt  cross-review-panel-ctx.md  cross-review2-impl.md  final-review-prompt.txt  fix-commit-msg.txt  fix-review-prompt.txt  s1.diff  (+13 more)
(+648 files in other folders)
