[package]
name = "naia-shell"
version = "0.1.4"
description = "Naia Shell - AI Avatar Desktop"
authors = ["Luke"]
edition = "2021"

[features]
default = []
whisper = ["tauri-plugin-stt/whisper"]
cuda = ["whisper", "tauri-plugin-stt/cuda"]

[lib]
name = "naia_shell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "unstable", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
url = "2"
libc = "0.2"
dirs = "5"
dunce = "1"
getrandom = "0.3"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-stt = { path = "plugins/tauri-plugin-stt" }
log = "0.4"
env_logger = "0.11"
zip = "2"
# HTTP client for CDP health-check (tiny, no async needed here)
ureq = { version = "2", features = ["json"] }
notify = "6"
# Small synchronous HTTP server for OAuth callback (#341 옵션 B —
# Linux dev:tauri 에서 naia:// scheme OS 등록 안 되는 문제 우회).
# tiny_http = ~1k LOC, std::net 기반, 의존성 최소.
tiny_http = "0.12"
png = "0.17"
portable-pty = "0.9.0"
sysinfo = { version = "0.34", default-features = false, features = ["system"] }
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Ime"] }
raw-window-handle = "0.6"
